# cuHLL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: wheels.yml
cmake/: CPMDownload.cmake
include/cuHLL/: cb2.hpp  common.hpp  concurrent.hpp  cuda_check.hpp  fasta.hpp  hll_cardinality.cuh  hll_file.hpp  kmer_kernel.cuh  kmer_kernel_cb2.cuh  nthash.cuh  nvtx_util.hpp  pipeline.hpp  sketch.hpp  sketch_internal.cuh
include/cuHLL/abundance/: abundance_estimator.hpp  abundance_finalizer.hpp  abundance_pipeline.cuh  abundance_sketch.cuh  abundance_statistics.hpp  kmer_enumerator.hpp
include/cuHLL/common/: common.hpp  cuda_check.hpp  nvtx_util.hpp
include/cuHLL/io/: fasta.hpp  hll_file.hpp
include/cuHLL/kmer/: kmer_kernel.cuh  nthash.cuh
include/cuHLL/pairwise/: pairwise.cuh
include/cuHLL/pipeline/: concurrent.hpp  pipeline.hpp
include/cuHLL/sketch/: hll_cardinality.cuh  sketch.hpp  sketch_internal.cuh
python/cuhll/: __init__.py  _bindings.cpp  diagnose.py
python/tests/: conftest.py  test_cuhll.py
src/: cb2.cpp  concurrent.cpp  fasta.cpp  hll_file.cpp  kmer_kernel.cu  kmer_kernel_cb2.cu  main.cpp  pipeline.cu  pipeline_concurrent.cu  sketch.cu
src/abundance/: abundance_pipeline.cu  abundance_sketch.cu
src/apps/: cuhll.cpp  cuhll_pairwise.cpp
src/io/: fasta.cpp  hll_file.cpp
src/kmer/: kmer_kernel.cu
src/pairwise/: pairwise.cu
src/pipeline/: concurrent.cpp  pipeline.cu  pipeline_concurrent.cu
src/probes/: cuco_probe.cu
src/sketch/: sketch.cu
tests/: CMakeLists.txt  abundance_test_common.hpp  test_abundance_ci.cu  test_abundance_count.cu  test_abundance_estimate.cu  test_abundance_oracle.cu  test_abundance_sketch.cu  test_abundance_statistics.cpp  test_abundance_tau.cu  test_auto_tune.cpp  test_canonical_flag.cu  test_cb2_correctness.cu  test_common.hpp  test_determinism.cu  test_fasta_stream.cpp  test_hll_roundtrip.cu  test_merge.cu  test_merge_equivalence.cu  test_nthash.cu  test_synthetic.cu  test_tiny_exact.cu
tools/: abundance_oracle_tool.cu  abundance_stream.cu  abundance_vram_probe.cu  cuhll_pack.cpp  validate_against_kmc.sh  validate_intersect_against_kmc.sh
